# air-purifier-n-of-1-trial

./: README.md  flake.nix  index.qmd  pyproject.toml
data/: air_monitor_2022_03_30.csv  resistance_training_dates.csv
results/: .gitignore
results/bsts/: ci_comparison.csv  fit_summary.csv  fit_summary_clean.csv  key_metrics.csv
results/bsts/sbc/: sbc_ranks.csv  sbc_stats.csv
src/: air_purification.py  bsts_ite_plot.py  bsts_plate_diagram.py  bsts_prior_pushforward.py  bsts_sbc.py  bsts_sbc_ecdf.py  ci_comparison_plot.py  ci_comparison_reduction.py  fit.py  fit_plots.py  gp_trajectory_plot.py  model.py  paired_power.r  plots.py  sbc_bridge.r  simulation.py  timeline_plot.py  utils.py
